--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -2,10 +2,10 @@
 <html data-wf-domain="rozs-fabulous-site-8115fb.webflow.io" data-wf-page="6414ec5a68f1ab03b2566000" data-wf-site="6414ec5868f1abfe4d565feb">
    <head>
       <meta charset="utf-8"/>
-      <title>Roz&#x27;s Fabulous Site</title>
+      <title>Just Code</title>
       <meta content="width=device-width, initial-scale=1" name="viewport"/>
       <meta content="Webflow" name="generator"/>
-      <link href="https://uploads-ssl.webflow.com/6414ec5868f1abfe4d565feb/css/rozs-fabulous-site-8115fb.webflow.eb8250407.css" rel="stylesheet" type="text/css">
+      <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" type="text/css">
       <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]--><script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
       <link href="https://uploads-ssl.webflow.com/img/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
       <link href="https://uploads-ssl.webflow.com/img/webclip.png" rel="apple-touch-icon"/>
