--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -7,8 +7,8 @@
       <meta content="Webflow" name="generator"/>
       <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" type="text/css">
       <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]--><script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-      <link href="https://uploads-ssl.webflow.com/img/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-      <link href="https://uploads-ssl.webflow.com/img/webclip.png" rel="apple-touch-icon"/>
+      <link href="{{ url_for('static', filename='favicon.png') }}" rel="shortcut icon" type="image/x-icon"/>
+      <link href="{{ url_for('static', filename='favicon.png') }}" rel="apple-touch-icon"/>
    </head>
    <style>
       pre{
